# pyLipSync

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  test.txt
examples/: usage.py
pyLipSync/: __init__.py  algorithms.py  comparison.py  core.py  types.py
pyLipSync/data/: phonemes.json
tests/: conftest.py  test_lipsync.py
